--- a/static/index.html
+++ b/static/index.html
@@ -8,10 +8,8 @@
 </head>
 <body>
   <body>
-    <h1>Hello World!</h1>
-    We are using node <script>document.write(process.versions.node)</script>,
-    Chrome <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+    <div id="root"></div>
+    <script src="./dist/bundle.min.js"></script>
   </body>
 </body>
 </html>
